--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
   <!-- Elegent Icon CSS -->
   <link rel="stylesheet" href="{% static 'assets/css/elegent-icons.css' %}" />
 
+
+
+
   <!-- All Plugins CSS css -->
   <link rel="stylesheet" href="{% static 'assets/css/plugins.css' %}" />
 
@@ -52,7 +55,7 @@
 
 <body>
 
-  <div class="wrapper bg--shaft">
+  <div class="wrapper">
   {% include "navbar.html" %}
 
     <div class="mt-5 pt-4">
