--- a/templates/home.html
+++ b/templates/home.html
@@ -1,32 +1,16 @@
-{% extends "base.html" %}
-{% load static %}
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <!-- Main Content Wrapper Start -->
 <div class="main-content-wrapper">
   <!-- Slider area Start -->
 
   <div class="slider-area">
     <div class="homepage-slider">
-
       <!-- Single Slide Start -->
       <div class="single-slider content-v-center" style="background-image: {% static 'assets/img/banner/banner1.jpg' %}">
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <div class="slider-content">
-                <h1 data-animation="fadeInDown" data-duration=".8s" data-delay=".3s">
-                  Some title here
-                </h1>
-                <p class="mb--30 mb-sm--20" data-animation="fadeInDown" data-duration=".8s" data-delay=".3s">
-                  Some text here
-                </p>
-                <p class="mb--50 mb-sm--20" data-animation="fadeInDown" data-duration=".8s" data-delay=".3s">
-                  Starting At <strong>Some Price here</strong>
-                </p>
-                <div class="slide-btn-group" data-animation="fadeInUp" data-duration="1s" data-delay=".3s">
-                  <a href="shop.html" class="btn btn-bordered btn-style-1">Shop Now</a>
-                </div>
-              </div>
+              <img src="{% static 'assets/img/banner/banner2.jpeg' %}" />
             </div>
           </div>
         </div>
@@ -42,22 +26,21 @@
       <div class="row">
         <div class="col-12">
           <div class="section-title mb--15">
-            <h2 class="color--white">Most Recent Products</h2>
+            <h2 class="color--black">Most Recent Products</h2>
           </div>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-12">
           <div class="product-carousel nav-top js-product-carousel-2">
-
             {% for item in object_list %}
             <div class="mirora-product">
               <div class="product-img">
                 <img src="{{ item.image.url }}" alt="Product" class="primary-image" />
-                <img src="{{ item.image.url }}" alt="Product" class="secondary-image" />
+                <img src="{{ item.image_fata.url }}" alt="Product" class="secondary-image" />
                 <div class="product-img-overlay">
                   <span class="product-label discount"> </span>
-                  <a data-toggle="modal" data-target="#productModal" class="btn btn-transparent btn-fullwidth btn-medium btn-style-1">Quick View</a>
+                  <!-- <a data-toggle="modal" data-target="#productModal" class="btn btn-transparent btn-fullwidth btn-medium btn-style-1">Quick View</a> -->
                 </div>
               </div>
               <div class="product-content text-center">
@@ -70,56 +53,53 @@
                 </div>
               </div>
               <div class="mirora_product_action text-center position-absolute">
-                <div class="product-rating">
-                  <span>
-                    <i class="fa fa-star theme-star"></i>
-                    <i class="fa fa-star theme-star"></i>
-                    <i class="fa fa-star theme-star"></i>
-                    <i class="fa fa-star theme-star"></i>
-                    <i class="fa fa-star"></i>
-                  </span>
-                </div>
+
                 <p>
                   {{ item.description }}
                 </p>
 
-                <div class="product-action">
-                  <a class="add_cart cart-item action-cart" href="{{ object.get_add_to_cart_url }}" title="wishlist">
+                <!-- <div class="product-action">
+                  <a
+                    class="add_cart cart-item action-cart"
+                    href="{{ object.get_add_to_cart_url }}"
+                    title="wishlist"
+                  >
                     <span>Add to cart</span>
                   </a>
-                  <a class="same-action compare-mrg" data-toggle="modal" data-target="#productModal" href="compare.html">
+                  <a
+                    class="same-action compare-mrg"
+                    data-toggle="modal"
+                    data-target="#productModal"
+                    href="compare.html"
+                  >
                     <i class="fa fa-sliders fa-rotate-90"></i>
                   </a>
-                </div>
+                </div> -->
               </div>
             </div>
             {% endfor %}
-
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- Most Viewed Product area End -->
-  <!-- Banner area Start -->
 
+  <!-- Banner area Start -->
   <section class="banner-area banner-bg-1 ptb--80 ptb-md--60">
     <div class="banner-box text-center">
       <h2 class="banner__name">New Trending Collection</h2>
       <p class="banner__text mb--50 mb-md--20">
-        We Believe That Good Design is Always in Season
+        Consideram ca, Cutare & Cutare
       </p>
-      <a href="shop.html" class="btn btn-bordered btn-style-1">Shop Now</a>
+      <a href="{% url 'core:shop-list' %}" class="btn btn-bordered btn-style-1">Shop Now</a>
     </div>
   </section>
-
   <!-- Banner area End -->
 
-
-
-{% for item in object_list %}
+  {% for item in object_list %}
   <!-- Modal Start -->
-  <div class="modal fade product-modal" id="productModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <!-- <div class="modal fade product-modal" id="productModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -131,46 +111,35 @@
               <div class="col-lg-5 col-md-6 mb-sm--20">
                 <div class="tab-content product-thumb-large">
 
+                  {% if item.image %}
                   <div id="thumb1" class="tab-pane active show fade">
-                    <img src="assets/img/products/1-1-600x600.jpg" alt="product thumb" />
+                    <img src="{{ item.image.url }}" alt="product thumb" />
                   </div>
+                  {% endif %}
+
+                  {% if item.image_lateral1 %}
                   <div id="thumb2" class="tab-pane fade">
-                    <img src="assets/img/products/2-600x600.jpg" alt="product thumb" />
+                    <img src="{{ item.image_lateral1.url }}" alt="product thumb" />
                   </div>
+                  {% endif %}
 
                 </div>
                 <div class="product-thumbnail">
                   <div class="thumb-menu" id="modal-thumbmenu">
+
+
                     <div class="thumb-menu-item">
                       <a href="#thumb1" data-toggle="tab" class="nav-link active">
-                        <img src="assets/img/products/1-1-450x450.jpg" alt="product thumb" />
+                        <img src="{{ item.image.url }}" alt="product thumb" />
                       </a>
                     </div>
+
                     <div class="thumb-menu-item">
                       <a href="#thumb2" data-toggle="tab" class="nav-link">
-                        <img src="assets/img/products/2-2-450x450.jpg" alt="product thumb" />
+                        <img src="{{ item.image_fata.url }}" alt="product thumb" />
                       </a>
                     </div>
-                    <div class="thumb-menu-item">
-                      <a href="#thumb3" data-toggle="tab" class="nav-link">
-                        <img src="assets/img/products/10-10-450x450.jpg" alt="product thumb" />
-                      </a>
-                    </div>
-                    <div class="thumb-menu-item">
-                      <a href="#thumb4" data-toggle="tab" class="nav-link">
-                        <img src="assets/img/products/11-11-450x450.jpg" alt="product thumb" />
-                      </a>
-                    </div>
-                    <div class="thumb-menu-item">
-                      <a href="#thumb5" data-toggle="tab" class="nav-link">
-                        <img src="assets/img/products/12-12-450x450.jpg" alt="product thumb" />
-                      </a>
-                    </div>
-                    <div class="thumb-menu-item">
-                      <a href="#thumb6" data-toggle="tab" class="nav-link">
-                        <img src="assets/img/products/13-13-450x450.jpg" alt="product thumb" />
-                      </a>
-                    </div>
+
                   </div>
                 </div>
               </div>
@@ -192,14 +161,12 @@
                   <div class="product-action-wrapper mb--20">
                     <div class="product-action-top d-flex align-items-center mb--20">
                       <div class="quantity">
-
                         <input type="number" class="quantity-input" name="qty" id="qty" value="1" min="1" />
                       </div>
                       <button type="button" class="btn btn-medium btn-style-2 add-to-cart">
                         Add To Cart
                       </button>
                     </div>
-
                   </div>
                   <p class="product-tags">
                     Tags: <a href="shop.html">Sport</a>,
@@ -212,9 +179,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Modal End -->
-{% endfor %}
+  {% endfor %}
+
 
   <!-- Newsletter area End -->
   <div class="newsletter-area pt--40 pb--80 pt-md--30 pb-md--60">
@@ -247,8 +215,5 @@
 <!-- Scroll To Top Start -->
 <a class="scroll-to-top" href=""><i class="fa fa-angle-double-up"></i></a>
 <!-- Scroll To Top End -->
-
-
-
 
 {% endblock content %}
