--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
 {% load cart_template_tags %}
+{% load static %}
 
 
 
@@ -9,27 +10,27 @@
         <div class="col-lg-8 d-flex align-items-center flex-column flex-lg-row">
           <ul class="social social-round mr--20">
             <li class="social__item">
-              <a href="http://twitter.com" class="social__link">
+              <a href="http://twitter.com" class="social__link__twitter">
                 <i class="fa fa-twitter"></i>
               </a>
             </li>
             <li class="social__item">
-              <a href="plus.google.com" class="social__link">
+              <a href="plus.google.com" class="social__link__google">
                 <i class="fa fa-google-plus"></i>
               </a>
             </li>
             <li class="social__item">
-              <a href="http://facebook.com" class="social__link">
+              <a href="http://facebook.com" class="social__link__facebook">
                 <i class="fa fa-facebook"></i>
               </a>
             </li>
             <li class="social__item">
-              <a href="http://youtube.com" class="social__link">
+              <a href="http://youtube.com" class="social__link__youtube">
                 <i class="fa fa-youtube"></i>
               </a>
             </li>
             <li class="social__item">
-              <a href="http://instagram.com" class="social__link">
+              <a href="http://instagram.com" class="social__link__instagram">
                 <i class="fa fa-instagram"></i>
               </a>
             </li>
@@ -47,12 +48,12 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="userID">
-{% if request.user.is_authenticated %}
-                  <a  class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
+                  {% if request.user.is_authenticated %}
+                  <a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
                   {% else %}
                   <a class="dropdown-item" href="{% url 'account_signup' %}">Register</a>
                   <a class="dropdown-item" href="{% url 'account_login' %}">Log In</a>
-  {% endif %}
+                  {% endif %}
                 </div>
 
               </div>
@@ -71,14 +72,14 @@
           <div class="contact-info">
 
             <p>
-              Call us <br />
-              Free Support: +40722101097
+              Email us <br />
+              Free Support: staysafe@metanoia-masks.ro
             </p>
           </div>
         </div>
         <div class="col-lg-2 col-12 order-lg-2 order-1 text-center">
           <a href="/" class="logo-box mb-md--30">
-            <img src="assets/img/logo/logo.png" alt="logo" />
+            <img src="{% static 'assets/img/logo/logo2.jpeg' %}" alt="logo" />
           </a>
         </div>
         <div class="col-lg-5 col-md-7 col-sm-6 order-lg-3 order-3">
@@ -89,7 +90,8 @@
                   <a class="mini-cart__dropdown-toggle bordered-icon" id="cartDropdown">
                     <span class="mini-cart__count">0</span>
                     <i class="icon_cart_alt mini-cart__icon"></i>
-                  </a </div>
+                  </a>
+                </div>
               </li>
             </ul>
           </div>
@@ -108,10 +110,10 @@
                 <a href="/" class="mainmenu__link">Home</a>
               </li>
               <li class="mainmenu__item">
-                <a href="shop-list/" class="mainmenu__link">All Products</a>
+                <a href="{% url 'core:shop-list' %}" class="mainmenu__link">All Products</a>
               </li>
               <li class="mainmenu__item">
-                <a href="about/" class="mainmenu__link">About Us</a>
+                <a href="{% url 'core:about' %}" class="mainmenu__link">About Us</a>
               </li>
               <li class="mainmenu__item">
                 <a href="#" class="mainmenu__link">contact Us</a>
