--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -22,7 +22,7 @@
                 <p class="mb--40 mb-sm--30">
                   Un duo mama-fiica cu o dragoste aparte pentru piese vintage care rezista trecerii timpului. Fiecare piesa creata cu drag raspunde unei singure intrebari: noi am purta-o cu drag?</p>
                 <div class="about-btn-group text-center">
-                  <a href="{% url 'core:gallery' %}" class="btn btn-style-3">view our work</a>
+                  <a href="/" class="btn btn-style-3">view our work</a>
                 </div>
               </div>
             </div>
