--- a/templates/footer.html
+++ b/templates/footer.html
@@ -46,10 +46,10 @@
         <div class="footer-widget">
           <h3 class="widget-title">Information</h3>
           <ul class="widget-menu">
-            <li><a href="about/">About Us</a></li>
+            <li><a href="{% url 'core:about' %}">About Us</a></li>
             <li><a href="">Delivery Information</a></li>
-            <li><a href="">Privacy Policy</a></li>
-            <li><a href="">Terms &amp; Conditions</a></li>
+            <li><a href="{% url 'core:privacy' %}">Privacy Policy</a></li>
+            <li><a href="{% url 'core:terms' %}">Terms &amp; Conditions</a></li>
           </ul>
         </div>
       </div>
@@ -58,8 +58,7 @@
           <h3 class="widget-title">Extras</h3>
           <ul class="widget-menu">
             <li><a href="">Brands</a></li>
-            <li><a href="">My Account</a></li>
-            <li><a href="">Returns</a></li>
+            <li><a href="{% url 'core:refunds' %}">Returns</a></li>
           </ul>
         </div>
       </div>
@@ -103,7 +102,7 @@
     <div class="row">
       <div class="col-12 text-center">
         <p class="copyright-text">
-          Copyright &copy; 2020 <a href="#">Metonia</a>
+          Copyright &copy; 2020 <a href="#">Metanoia</a>
         </p>
 
       </div>
